Fixed form alignment

--- a/public/styles/sass/_index.scss
+++ b/public/styles/sass/_index.scss
@@ -166,7 +166,7 @@ h3 + p {
 #close {
   padding: 147px 0 147px 0;
   form {
-    margin-top: -432px;
+    margin-top: -360px;
   }
 }
 }
